# sostav

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dep/libmikmod-3.3.10/win32/VS2005/: libmikmod.sln  libmikmod.vcxproj
include/sostav/: chiptunes.hpp  drawing.hpp  locale.hpp
include/sostav/chiptunes/: mikmoddriver.hpp  mikmodloader.hpp  mikmodmodule.hpp
include/sostav/drawing/: font.hpp  gradient.hpp  icon.hpp  point.hpp
include/sostav/math/: ellipse.hpp  line.hpp  point.hpp
include/sostav/win32/: button.hpp  notifyicon.hpp  syslink.hpp
include/sostav/windows/: layeredwindow.hpp  paintedwindow.hpp  window.hpp
msvc/sostav/: sostav.sln  sostav.vcxproj  sostav.vcxproj.filters
msvc/sostav-test/: sostav-test.vcxproj  sostav-test.vcxproj.filters
src/chiptunes/: mikmoddriver.cpp  mikmodmodule.cpp
src/controls/: sostavstatic.cpp
src/drawing/: color.cpp  font.cpp  icon.cpp
src/include/sostav/: color.hpp  controls.hpp  drawing.hpp  exception.hpp  font.hpp  gradient.hpp  math.hpp  rectangle.hpp  sostav.hpp  static.hpp  subclassedwindow.hpp  types.hpp  win32.hpp  window.hpp  windows.hpp
src/include/sostav/chiptunes/: mikmoddriver.hpp  mikmodloader.hpp  mikmodmodule.hpp
src/include/sostav/controls/: static.hpp
src/lib/: color.cpp  exception.cpp  font.cpp  locale.cpp  static.cpp  subclassedwindow.cpp  window.cpp
src/lib/chiptunes/: mikmoddriver.cpp  mikmodloader.cpp  mikmodmodule.cpp
src/lib/controls/: sostavstatic.cpp  static.cpp
src/lib/drawing/: color.cpp  drawingpoint.cpp  font.cpp  gradient.cpp  icon.cpp  image.cpp  lineargradient.cpp  point.cpp  windowpoint.cpp
src/lib/math/: angle.cpp  ellipse.cpp  line.cpp  mathpoint.cpp
src/lib/win32/: edit.cpp  notifyicon.cpp  static.cpp  win32button.cpp  win32edit.cpp  win32static.cpp  win32syslink.cpp
src/lib/windows/: imagedialogwindow.cpp  imagewindow.cpp  layeredwindow.cpp  paintedwindow.cpp  static.cpp  subclassedwindow.cpp  window.cpp
src/math/: angle.cpp  ellipse.cpp  line.cpp
src/test/: main.cpp  main.hpp  resource.hpp
src/test/res/: main.rc  sostav.xcf
src/win32/: win32button.cpp  win32edit.cpp
src/windows/: imagedialogwindow.cpp  imagewindow.cpp  layeredwindow.cpp  paintedwindow.cpp  subclassedwindow.cpp  window.cpp
test/: main.hpp  resource.hpp
test/res/: main.rc
(+25 files in other folders)
